packages/typ/tests/fixtures/diagnostics/0406_modules_opaque_value_annotation_mismatch_01.ml.infer.expected
File "0406_modules_opaque_value_annotation_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0406_modules_opaque_value_annotation_mismatch_01 is not a valid module name.

File "0406_modules_opaque_value_annotation_mismatch_01.ml", line 12, characters 14-28:
12 | let _ : int = Hidden_alpha.x
                   ^^^^^^^^^^^^^^
Error: The value Hidden_alpha.x has type Hidden_alpha.t
       but an expression was expected of type int
